fix: fix strange behaviour in Video segmented control caused by overflow-x: auto property

--- a/src/components/Video/Video.module.css
+++ b/src/components/Video/Video.module.css
@@ -19,7 +19,7 @@
 }
 
 .root {
-    overflow-x: auto;
+    flex-wrap: wrap;
     background: none;
     border-radius: 0;
 
